--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ derive_builder = "0.11.2"
 env_logger = "0.9.0"
 log = "0.4.17"
 nom = "7.1.1"
+strum = { version = "0.24.1", features = ["derive"] }
 walkdir = "2"
