--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "3.2.7", features = ["derive"] }
 derive_builder = "0.11.2"
 env_logger = "0.9.0"
+itertools = "0.10.3"
 log = "0.4.17"
 nom = "7.1.1"
 strum = { version = "0.24.1", features = ["derive"] }
