--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ edition = "2021"
 clap = { version = "3.2.7", features = ["derive"] }
 derive_builder = "0.11.2"
 env_logger = "0.9.0"
+ignore = "0.4.18"
 itertools = "0.10.3"
 log = "0.4.17"
 nom = "7.1.1"
 strum = { version = "0.24.1", features = ["derive"] }
-walkdir = "2"
