--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "3.2.7", features = ["derive"] }
-derive_builder = "0.11.2"
-env_logger = "0.9.0"
+clap = { version = "4.4.8", features = ["derive"] }
+derive_builder = "0.12.0"
 ignore = "0.4.18"
-itertools = "0.10.3"
-log = "0.4.17"
+itertools = "0.12.0"
 nom = "7.1.1"
-strum = { version = "0.24.1", features = ["derive"] }
+strum = { version = "0.25.0", features = ["derive"] }
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
